--- a/index.html
+++ b/index.html
@@ -70,8 +70,8 @@
           <p class="text-description">I need a visual revamp <br>asap</p>
         </div>
         <div class="services-card-img">
-          <img src="../img/cards.png" alt="cards" class="back">
-          <img src="../img/laptop.png" alt="laptop" class="front">
+          <img src="./img/cards.png" alt="cards" class="back">
+          <img src="./img/laptop.png" alt="laptop" class="front">
         </div>
         <div class="services-card-button">
           <p class="button-text">TELL ME MORE</p>
@@ -98,8 +98,8 @@
           <p class="text-description">I need an <br>external <br>marketing team</p>
         </div>
         <div class="services-card-img">
-          <img src="../img/laptop.png" alt="laptop" class="back">
-          <img src="../img/book.jpg" alt="book" class="front">
+          <img src="./img/laptop.png" alt="laptop" class="back">
+          <img src="./img/book.jpg" alt="book" class="front">
         </div>
         <div class="services-card-button">
           <p class="button-text">TELL ME MORE</p>
@@ -126,8 +126,8 @@
           <p class="text-description">I Need to <br>increase online<br> presence</p>
         </div>
         <div class="services-card-img">
-          <img src="../img/book.jpg" alt="book" class="back">
-          <img src="../img/phone.jpg" alt="phone" class="front">
+          <img src="./img/book.jpg" alt="book" class="back">
+          <img src="./img/phone.jpg" alt="phone" class="front">
         </div>
         <div class="services-card-button">
           <p class="button-text">TELL ME MORE</p>
